build(deps): bump the gradle group with 7 updates